--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -1,7 +1,13 @@
 mohdataflowmodule.title=HMIS Data flow Module
 mohdataflowmodule.dashboard=Medical History
 mohdataflowmodule.patienthistory=Patient medical history (This is about any past medical history at this facility or hospital)
-mohdataflowmodule.laborder=Lab orders and results (This means all tests and their respective results)
+mohdataflowmodule.laborder=Laboratry orders and their results
 mohdataflowmodule.xrayorder=X-Ray orders and results
-mohdataflowmodule.drugorder=Drug orders (This will be any past Drug order that has been ordered by a clinician to a patient)
+mohdataflowmodule.drugorder=Drug orders (Pharmacy Management Module)
 mohdataflowmodule.discharge=Discharge
+mohdataflowmodule.MedicalHistory=Medical History
+mohdataflowmodule.MedicalHistoryConfiguration=Medical History Configuration
+mohdataflowmodule.acts= Medical Acts
+mohdataflowmodule.visits = Clinical Visits
+mohdataflowmodule.diagnosis= Diagnosis
+mohdataflowmodule.drugAdmin= Drug Administration
